--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -52,7 +52,7 @@
 
                     </ul>
 
-                    <ul class="nav justify-content-end">
+                    <ul class="nav justify-content-end buttons-on-the-right">
                         <li class="nav-item manage-class-nav-item-on-right">
                             <button id="manage-class-edit" type="button" class="btn btn-info" disabled="true">
                                 Edit Class</button>
