--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -1,5 +1,5 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String])(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String], userFamilyName: Option[String], devToggle: Boolean)(implicit request: AuthenticatedRequest[Any])
 
 @timetoteachAppMain(handler, "Dashboard", userPictureUri, userFirstName, userFamilyName) {
     <li></li>}{
@@ -11,8 +11,14 @@
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button">
                         Classes</a>
-                    <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">Termly Plans</button>
-                    @*<a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">Termly Plans</a>*@
+
+                    @if(devToggle) {
+                        <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
+                            Termly Plans</a>
+                    } else {
+                        <button type="button" disabled="true" class="btn btn-secondary btn-lg dashboard-button">
+                            Termly Plans</button>
+                    }
                     <button type="button" disabled="true" class="btn btn-dark btn-lg dashboard-button">Weekly Plans</button>
                 </div>
                 <div class="col-md-1">
