--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -10,17 +10,17 @@
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
-            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+            <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
                 Dashboard</a>
         </li>
 
         <li class="nav-item nav-login-button">
-            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+            <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
                 Classes</a>
         </li>
 
         <li class="nav-item nav-login-button">
-            <a class="btn btn-primary" role="button"
+            <a class="btn btn-outline-primary" role="button"
             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
             @classDetails.className.name</a>
         </li>
@@ -35,17 +35,17 @@
                 <div class="d-flex">
                     <ul class="nav mr-auto justify-content-between">
                         <li class="nav-item manage-class-nav-item-leftmost">
-                            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                            <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
                                 Dashboard</a>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                            <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
                                 Classes</a>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-primary" role="button"
+                            <a class="btn btn-outline-primary" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
                             @classDetails.className.name</a>
                         </li>
