--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -6,28 +6,28 @@
 
     <div class="in-app-menu-small-devices">
         <li class="nav-item nav-login-button">
-            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+            <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
                 Dashboard</a>
         </li>
 
         <li class="nav-item nav-login-button">
-            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+            <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
                 Classes</a>
         </li>
 
         <li class="nav-item nav-login-button">
-            <a id="manage-class-goto-timetable" class="btn btn-primary" role="button"
+            <a id="manage-class-goto-timetable" class="btn btn-outline-primary" role="button"
             href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
                 Timetable</a>
         </li>
 
         <li class="nav-item nav-login-button">
-            <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">
+            <button id="manage-class-goto-timetable" type="button" class="btn btn-outline-primary" disabled="true">
                 Termly Plans</button>
         </li>
 
         <li class="nav-item nav-login-button">
-            <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">
+            <button id="manage-class-goto-timetable" type="button" class="btn btn-outline-primary" disabled="true">
                 Weekly Plans</button>
         </li>
     </div>
@@ -40,28 +40,28 @@
                 <div class="d-flex ">
                     <ul class="nav mr-auto justify-content-between">
                         <li class="nav-item manage-class-nav-item-leftmost">
-                            <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                            <a class="btn btn-outline-primary" role="button" href="@routes.Application.timeToTeachApp()">
                                 Dashboard</a>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                            <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
                                 Classes</a>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <a id="manage-class-goto-timetable" class="btn btn-primary" role="button"
+                            <a id="manage-class-goto-timetable" class="btn btn-outline-primary" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.id.id)">
                                 Timetable</a>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">
+                            <button id="manage-class-goto-timetable" type="button" class="btn btn-outline-primary" disabled="true">
                                 Termly Plans</button>
                         </li>
 
                         <li class="nav-item manage-class-nav-item-on-left">
-                            <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">
+                            <button id="manage-class-goto-timetable" type="button" class="btn btn-outline-primary" disabled="true">
                                 Weekly Plans</button>
                         </li>
 
