--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -18,7 +18,7 @@
 
      <li class="nav-item manage-class-nav-item-on-left">
       <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-       Classes</a>
+       Classes Home</a>
      </li>
 
     </ul>
