--- a/server/app/views/planning/termly/termlyPlansHome.scala.html
+++ b/server/app/views/planning/termly/termlyPlansHome.scala.html
@@ -12,7 +12,7 @@
 
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-                Classes</a>
+                Classes Home</a>
         </li>
 
 
@@ -29,7 +29,7 @@
                         </li>
                         <li class="nav-item manage-class-nav-item-on-left">
                             <a class="btn btn-outline-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
-                                Classes</a>
+                                Classes Home</a>
                         </li>
                     </ul>
                 </div>
@@ -40,11 +40,13 @@
         <div id="termly-plans-overview-of-all-classes-section">
         @for(schoolName_to_class <- teacherSchoolToClasses) {
             <div class="text-center termly-plans-overview-school-name"><h5>@schoolName_to_class._1</h5></div>
-            <div class="termly-plans-overview-headers">
-                <div class="row">
-                    <div class="col-lg-2"><small class="text-muted">Class Name</small></div>
-                    <div class="col-lg-2"><small class="text-muted">Progress</small></div>
-                    <div class="col-lg-6"><small class="text-muted">Teachers</small></div>
+            <div class="in-app-menu-medium-and-up">
+                <div class="termly-plans-overview-headers">
+                    <div class="row">
+                        <div class="col-lg-2"><small class="text-muted">Class Name</small></div>
+                        <div class="col-lg-2"><small class="text-muted">Termly Plan Progress</small></div>
+                        <div class="col-lg-6"><small class="text-muted">Teachers</small></div>
+                    </div>
                 </div>
             </div>
 
@@ -52,14 +54,16 @@
                 <div class="termly-plans-overview-row">
                     <div class="row">
                         <div class="col-xs-3 col-lg-2">
-                            <a class="btn btn-sm btn-primary btn-block" role="button" href="#">@teacherClass.className.name</a>
+                            <a class="btn btn-sm btn-primary btn-block" role="button"
+                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(teacherClass.id.id)">
+                            @teacherClass.className.name</a>
                         </div>
                         <div class="col-xs-3 col-lg-2">
                             <div class="progress">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
-                        <div class="col-xs-0 col-lg-6">@userFirstName @userFamilyName</div>
+                        <div class="col-xs-0 col-lg-6 muted">@userFirstName @userFamilyName</div>
                         <div class="col-xs-3 col-lg-2">
                             <button class="btn btn-sm btn-outline-success btn-block" role="button" href="#" disabled="true">Share Plan</button>
                         </div>
