--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -10,7 +10,7 @@
                 <div class="col-md-5 dashboardFadedBackground text-center">
                     <h3 class="display-5 text-center">Planning</h3>
                     <a class="btn btn-primary btn-lg dashboard-button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()" role="button">
-                        Classes</a>
+                        Classes Home</a>
 
                     @if(devToggle) {
                         <a class="btn btn-info btn-lg dashboard-button" href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlans()" role="button">
