--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -6,14 +6,23 @@
     background: rgba(250, 250, 250, 0.45);
     border: 1px solid lightgrey;
 }
+
 .termly-plans-overview-school-name {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
 }
+
 .termly-plans-overview-row {
+    padding: 0.5rem;
     margin-bottom: 1rem;
+    background: rgba(125, 125, 125, 0.15);
+    border: 1px solid white;
 }
 
-.termly-plans-overview-headers{
+.termly-plans-overview-headers {
     margin-bottom: 0.6rem;
+}
+
+.termly-plans-overview-datum {
+    margin-bottom: 1.2rem;
 }
