--- a/server/app/views/planning/classtimetables/classtimetable.scala.html
+++ b/server/app/views/planning/classtimetables/classtimetable.scala.html
@@ -22,7 +22,13 @@
         <li class="nav-item nav-login-button">
             <a class="btn btn-outline-primary btn-block" role="button"
             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
-            @classDetails.className.name Setup</a>
+            Manage @classDetails.className.name</a>
+        </li>
+
+        <li class="nav-item nav-login-button">
+            <a id="manage-class-goto-timetable" class="btn btn-outline-primary btn-block" role="button"
+            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(classDetails.id.id)">
+                Termly Plans</a>
         </li>
     </div>
 
@@ -47,8 +53,15 @@
                         <li class="nav-item manage-class-nav-item-on-left">
                             <a class="btn btn-info" role="button"
                             href="@controllers.planning.classtimetable.routes.ClassTimetableController.manageClass(classDetails.id.id)">
-                            @classDetails.className.name Setup</a>
+                            Manage @classDetails.className.name</a>
                         </li>
+
+                        <li class="nav-item manage-class-nav-item-on-left">
+                            <a class="btn btn-info" role="button"
+                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForClass(classDetails.id.id)">
+                                Termly Plans</a>
+                        </li>
+
 
                     </ul>
 
