--- a/server/app/views/planning/termly/termlyPlansForClass.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClass.scala.html
@@ -56,13 +56,80 @@
             </div>
         </div>
 
-        <br>
-        <h3>Lets termly plan this class then, eh?</h3>
-        <h4>Name: @classDetails.className.name</h4>
-        <h4>Description: @classDetails.classDescription.name</h4>
 
-        @for(group <- classDetails.groups) {
-            <h3>Group Name: @group.groupName.name</h3>
-        }
+        <div class="termly-plans-overview-section text-center">
+            <h4 class="termly-plans-overview-section-header">Termly Plans</h4>
+
+            <div id="termly-plans-overview-of-all-classes-section">
+                <div class="in-app-menu-medium-and-up">
+                    <div class="termly-plans-overview-headers">
+                        <div class="row">
+                            <div class="col-lg-3"><small class="text-muted">Subject Area</small></div>
+                            <div class="col-lg-1"></div>
+                            <div class="col-lg-4"><small class="text-muted">Plan Progress</small></div>
+                            <div class="col-lg-4"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row termly-plans-overview-section-row">
+                    <div class="col-xs-3 col-lg-3">
+                        <a class="btn btn-sm btn-primary btn-block" data-toggle="collapse"
+                        href="#collapseClassGroup" role="button" aria-expanded="false" aria-controls="collapseClassGroup">
+                            Maths
+                        </a>
+                    </div>
+                    <div class="col-xs-3 col-lg-1"></div>
+                    <div class="col-xs-3 col-lg-4">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 0" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-3 col-lg-2"></div>
+                    <div class="col-xs-3 col-lg-2">
+                        <button class="btn btn-sm btn-outline-success btn-block" role="button" href="#" disabled="true">
+                            Share</button>
+                    </div>
+                </div>
+                <div class="termly-plans-collapse-conatiner">
+                    <div class="collapse mx-auto" id="collapseClassGroup">
+                        <div class="card card-body">
+                            <div class="in-app-menu-medium-and-up">
+                                <div class="termly-plans-overview-headers">
+                                    <div class="row">
+                                        <div class="col-lg-3"><small class="text-muted">Group</small></div>
+                                        <div class="col-lg-1"></div>
+                                        <div class="col-lg-3"><small class="text-muted">Level</small></div>
+                                        <div class="col-lg-4"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            @for(group <- classDetails.groups) {
+                                @if(group.groupType.value == "Maths") {
+                                    <div class="row termly-plans-group-row">
+                                        <div class="col-lg-3">
+                                            <a type="button" class="btn btn-info btn-sm btn-block"
+                                            href="@controllers.planning.termly.routes.TermlyPlansController.termlyPlansForGroup(classDetails.id.id, group.groupType.value, group.groupId.id)">@group.groupName.name.capitalize</a>
+                                        </div>
+                                        <div class="col-lg-1"></div>
+                                        <div class="col-lg-3">
+                                            <label>@group.groupLevel.value.toUpperCase.replace("LEVEL", "")</label>
+                                        </div>
+                                        <div class="col-lg-3"></div>
+                                        <div class="col-lg-2">
+                                            <span class="badge badge-pill badge-danger">Not Started</span>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
     </div>
 }
